--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,17 +5,21 @@
         <item
             android:id="@+id/xml_sample"
             android:checked="true"
-            android:title="@string/drawer_item_title_xml_sample"/>
+            android:title="@string/drawer_item_title_xml_sample" />
         <item
             android:id="@+id/dynamic_sample"
-            android:title="@string/drawer_item_title_dynamic_sample"/>
+            android:title="@string/drawer_item_title_dynamic_sample" />
         <item
             android:id="@+id/configurable_page"
-            android:title="@string/drawer_item_title_configurable_page"/>
+            android:title="@string/drawer_item_title_configurable_page" />
 
         <item
             android:id="@+id/endless_feed_sample"
             android:title="@string/endless_feed" />
+
+        <item
+            android:id="@+id/endless_feed_with_list"
+            android:title="@string/feed_inside_list" />
     </group>
 
 </menu>
