--- a/app/src/main/res/layout/fragment_endless_feed_with_list.xml
+++ b/app/src/main/res/layout/fragment_endless_feed_with_list.xml
@@ -3,4 +3,6 @@
     android:id="@+id/feed_rv"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp" />
+    android:layout_marginLeft="16dp"
+    android:layout_marginBottom="10dp"
+    android:layout_marginRight="16dp" />
