adding more samples for view pager and listview

--- a/app/src/main/res/layout/dialog_config.xml
+++ b/app/src/main/res/layout/dialog_config.xml
@@ -10,7 +10,7 @@
 
         <variable
             name="properties"
-            type="com.taboola.taboolasample.data.Properties" />
+            type="com.taboola.taboolasample.Properties" />
 
         <variable
             name="requiredFields"
